--- a/Curso de Regresión Lineal con Python y scikit-learn/Proyecto_Final_Template.ipynb
+++ b/Curso de Regresión Lineal con Python y scikit-learn/Proyecto_Final_Template.ipynb
@@ -1294,7 +1294,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "datasc",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1308,11 +1308,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.10.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "79dbe34f3331601ea2f78c84d14ae09801f1eed37b2e507eb3f329a4df7d13e6"
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
       }
     }
   },
